파일 글자포멧 깨진거 확인1시 15분 백엄

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ jspm_packages
 
 # End of https://www.gitignore.io/api/jspm,java,eclipse
 WebContent/club/clubWrite2.jsp
+WebContent/club/새 폴더/index.jsp
