--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>JSP</display-name>
-  	<servlet>
-		<servlet-name>DispatcherServlet</servlet-name>
-		<servlet-class>servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>controllers</param-name>
-			<param-value>
-				controller.JoinController,
-				controller.LoginController,
-				controller.LogoutController,
-				controller.ClubWriteController
+  <servlet>
+    <servlet-name>DispatcherServlet</servlet-name>
+    <servlet-class>servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>controllers</param-name>
+      <param-value>
+			 controller.JoinController,
+            controller.LoginController,
+            controller.LogoutController,
+            controller.ClubWriteController,
+            controller.ClubBoardController,
+            controller.SupportController
 			</param-value>
-		</init-param>
-	</servlet>
-	
-	<servlet>
-		<servlet-name>TestController</servlet-name>
-		<servlet-class>test.TestController</servlet-class>
-	</servlet>
-	 
-	
-	<servlet-mapping>
-		<servlet-name>DispatcherServlet</servlet-name>
-		<url-pattern>*.do</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>TestController</servlet-name>
-		<url-pattern>/test</url-pattern>
-	</servlet-mapping>
-	 
+    </init-param>
+  </servlet>
+  <servlet>
+    <servlet-name>TestController</servlet-name>
+    <servlet-class>test.TestController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DispatcherServlet</servlet-name>
+    <url-pattern>*.do</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>TestController</servlet-name>
+    <url-pattern>/test</url-pattern>
+  </servlet-mapping>
 </web-app>
