게스트합침

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,7 @@
             controller.LogoutController,
             controller.ClubWriteController,
             controller.ClubBoardController,
+            controller.GuestLoginController,
             controller.SupportController
 			</param-value>
     </init-param>
